job post ok & show job post ok ✅

--- a/symfony-project/templates/company/inscription-company.html.twig
+++ b/symfony-project/templates/company/inscription-company.html.twig
@@ -22,16 +22,16 @@
 						<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 							<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 								<li>
-									<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
+									<a class="text-black" href="{{path('app_company')}}">Accueil</a>
 								</li>
 								<li class="active">
-									<a class="text-black" href="{{path('app_offre')}}">Offres</a>
+									<a class="text-black" href="{{path('app_offre')}}">Profils</a>
 								</li>
 								<li class="active">
-									<a class="text-black" href="{{path('app_matching')}}">Matching</a>
+									<a class="text-black" href="{{path('match-dev')}}">Matching</a>
 								</li>
 								<li>
-									<a class="text-black" href="">Favoris</a>
+									<a class="text-black" href="">Statistiques</a>
 								</li>
 								<li class="has-children">
 									<a href="#" class="text-black font-weight-bold">Mon compte</a>
