--- a/symfony-project/templates/home/index.html.twig
+++ b/symfony-project/templates/home/index.html.twig
@@ -219,7 +219,7 @@
 										</div>
 									</div>
 									<blockquote>
-										<p>&ldquo;Grâce à AdopteUnDev j'ai rencontré une l'entreprise de mes rêves.&rdquo;</p>
+										<p>&ldquo;Grâce à AdopteUnDev j'ai rencontré l'entreprise de mes rêves.&rdquo;</p>
 									</blockquote>
 								</div>
 							</div>
@@ -239,67 +239,64 @@
 		</div>
 
 		<div class="site-section bg-light" id="blog-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-7 mb-4 position-relative text-center mx-auto">
-						<h2 class="font-weight-bold text-center">Postes disponibles</h2>
-						<p>Découvrez les entreprises à la recherche de talents.</p>
+			<div class="row">
+				<div class="col-7 position-relative text-center mx-auto">
+					<h2 class="font-weight-bold text-center">Postes disponibles</h2>
+					<p>Découvrez les entreprises à la recherche de talents.</p>
+				</div>
+			</div>
+			<div class="site-section bg-light" id="blog-section">
+				<div class="container">
+					<div class="container">
+						{# <div class="row">
+							<div class="col-md-6 col-lg-4 mb-4">
+								<div class="card shadow-sm p-3">
+									<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+									<div class="card-body">
+										<h5 class="card-title">Chef de projet SI</h5>
+										<p class="card-text">
+											Stage de 6 mois
+											<br>
+											Nanterre, France
+										</p>
+										<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-lg-4 mb-4">
+								<div class="card shadow-sm p-3">
+									<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+									<div class="card-body">
+										<h5 class="card-title">Software Developer</h5>
+										<p class="card-text">
+											CDI
+											<br>
+											Boulogne-Billancourt, France
+										</p>
+										<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-lg-4 mb-4">
+								<div class="card shadow-sm p-3">
+									<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+									<div class="card-body">
+										<h5 class="card-title">Stage Développeur</h5>
+										<p class="card-text">
+											Stage de 4 à 6 mois
+											<br>
+											Courbevoie, France
+										</p>
+										<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+									</div>
+								</div>
+							</div>
+						</div> #}
 					</div>
 
-				</div>
-				<div class="site-section bg-light" id="blog-section">
-					<div class="container">
-						<div class="container">
-							<div class="row">
-								<div class="col-md-6 col-lg-4 mb-4">
-									<div class="card shadow-sm p-3">
-										<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-										<div class="card-body">
-											<h5 class="card-title">Chef de projet SI</h5>
-											<p class="card-text">
-												Stage de 6 mois
-												<br>
-												Nanterre, France
-											</p>
-											<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6 col-lg-4 mb-4">
-									<div class="card shadow-sm p-3">
-										<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-										<div class="card-body">
-											<h5 class="card-title">Software Developer</h5>
-											<p class="card-text">
-												CDI
-												<br>
-												Boulogne-Billancourt, France
-											</p>
-											<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6 col-lg-4 mb-4">
-									<div class="card shadow-sm p-3">
-										<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-										<div class="card-body">
-											<h5 class="card-title">Stage Développeur</h5>
-											<p class="card-text">
-												Stage de 4 à 6 mois
-												<br>
-												Courbevoie, France
-											</p>
-											<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="row mt-5">
-							<div class="col-lg-4 mx-auto">
-								<a href="{{path('app_infojob')}}" class="btn btn-primary btn-block">Voir plus</a>
-							</div>
+					<div class="row mt-5">
+						<div class="col-lg-4 mx-auto">
+							<a href="{{path('app_infojob')}}" class="btn btn-primary btn-block">Voir plus</a>
 						</div>
 					</div>
 				</div>
