--- a/symfony-project/templates/matching/index.html.twig
+++ b/symfony-project/templates/matching/index.html.twig
@@ -159,7 +159,7 @@
 									<br>
 									Nanterre, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -174,7 +174,7 @@
 									<br>
 									Boulogne-Billancourt, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 									<br>
 									Courbevoie, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
