--- a/symfony-project/templates/developer/offre.html.twig
+++ b/symfony-project/templates/developer/offre.html.twig
@@ -120,7 +120,7 @@
 									<br>
 									Nanterre, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -135,7 +135,7 @@
 									<br>
 									Boulogne-Billancourt, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -150,7 +150,7 @@
 									<br>
 									Courbevoie, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -169,7 +169,7 @@
 									<br>
 									Nanterre, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -184,7 +184,7 @@
 									<br>
 									Boulogne-Billancourt, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -199,7 +199,7 @@
 									<br>
 									Courbevoie, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -218,7 +218,7 @@
 									<br>
 									Nanterre, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -233,7 +233,7 @@
 									<br>
 									Boulogne-Billancourt, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
@@ -248,7 +248,7 @@
 									<br>
 									Courbevoie, France
 								</p>
-								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
 							</div>
 						</div>
 					</div>
