--- a/symfony-project/templates/company/fiche-poste.html.twig
+++ b/symfony-project/templates/company/fiche-poste.html.twig
@@ -47,6 +47,9 @@
 								<a class="text-black" href="{{path('match-dev')}}">Matching</a>
 							</li>
 							<li>
+								<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
+							</li>
+							<li>
 								<a class="text-black" href="">Statistiques</a>
 							</li>
 
