--- a/symfony-project/templates/company/inscription-company.html.twig
+++ b/symfony-project/templates/company/inscription-company.html.twig
@@ -31,6 +31,9 @@
 									<a class="text-black" href="{{path('match-dev')}}">Matching</a>
 								</li>
 								<li>
+									<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
+								</li>
+								<li>
 									<a class="text-black" href="">Statistiques</a>
 								</li>
 								<li class="has-children">
