--- a/symfony-project/templates/developer/index.html.twig
+++ b/symfony-project/templates/developer/index.html.twig
@@ -156,14 +156,15 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="site-section bg-light" id="blog-section">
 			<div class="container">
 				<div class="row">
-					<h2 class="font-weight-bold text-center">Dernières offres publiées</h2>
+					<h2 class="font-weight-bold text-center">Les postes les plus consultés</h2>
 				</div>
 				<div class="container">
 					<div class="row">
-						{% for fiche in fiches_de_poste %}
+						{% for fiche in offres %}
 							<div class="col-md-6 col-lg-4 mb-4">
 								<div class="card shadow-sm p-3">
 									<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
