--- a/symfony-project/templates/developer/offre.html.twig
+++ b/symfony-project/templates/developer/offre.html.twig
@@ -107,154 +107,28 @@
 				</button>
 			</div>
 			<div class="container">
-				<div
-					class="row">
-					<!-- Offre 1 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Chef de projet SI</h5>
-								<p class="card-text">
-									Stage de 6 mois
-									<br>
-									Nanterre, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 2 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Software Developer</h5>
-								<p class="card-text">
-									CDI
-									<br>
-									Boulogne-Billancourt, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 3 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
-								<p class="card-text">
-									Stage de 4 à 6 mois
-									<br>
-									Courbevoie, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-				</div>
+				<div class="row">
+					{% for fiche in offres %}
+						<div class="col-md-6 col-lg-4 mb-4">
+							<div class="card shadow-sm p-3">
+								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+								<div class="card-body">
+									<h3>
+										{{ fiche.entreprise.nom }}</h3>
 
-				<div
-					class="row">
-					<!-- Offre 1 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Chef de projet SI</h5>
-								<p class="card-text">
-									Stage de 6 mois
-									<br>
-									Nanterre, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
+									<h5 class="card-title">{{ fiche.titre }}</h5>
+									<p class="card-text">
+										{{ fiche.description }}
+										<br>
+										{{ fiche.localisation }}
+									</p>
+									<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<!-- Offre 2 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Software Developer</h5>
-								<p class="card-text">
-									CDI
-									<br>
-									Boulogne-Billancourt, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 3 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
-								<p class="card-text">
-									Stage de 4 à 6 mois
-									<br>
-									Courbevoie, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div
-					class="row">
-					<!-- Offre 1 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Chef de projet SI</h5>
-								<p class="card-text">
-									Stage de 6 mois
-									<br>
-									Nanterre, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 2 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Software Developer</h5>
-								<p class="card-text">
-									CDI
-									<br>
-									Boulogne-Billancourt, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
-					<!-- Offre 3 -->
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
-							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-							<div class="card-body">
-								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
-								<p class="card-text">
-									Stage de 4 à 6 mois
-									<br>
-									Courbevoie, France
-								</p>
-								{# <a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a> #}
-							</div>
-						</div>
-					</div>
+					{% endfor %}
 				</div>
 			</div>
-
 		</div>
 
 
